test/operator/add_nil_nil.lox
null + null // error: Operation not allowed
